feat: 당첨 번호 구분 기능 추가